tests/parser/matlab_2021a_name_value_pairs/nv_pair_6.m.out
In nv_pair_6.m, line 4
| potato(a=5);
|         ^ error: expected IDENTIFIER, found ASSIGNMENT instead
MISS_HIT Debug Summary: 1 file(s) analysed, 1 error(s)
